--- a/.gitmodules
+++ b/.gitmodules
@@ -15,4 +15,4 @@
 	url = https://github.com/csse497/pathfinder-server
 [submodule "pathfinder.js"]
 	path = pathfinder.js
-	url = https://github.com/csse497/pathfinder.js
+	url = http://github.com/csse497/pathfinder.js
